--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.13",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
