--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "framer-motion": "^11.2.13",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
